--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       Coded by <a href="http://altugokumus.com/">Altug Okumus</a>.
     </div>
   </footer>
-  <script src="index.js"></script>
+  <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
